# figaro

./: README.md  pyproject.toml
example/: .gitignore  README.md
example/figscripts/: line.py  parabola.py  utils.py
src/figaro/: __init__.py  figarocli.py  figarodec.py
