[project]
name = "figaro"
version = "0.1.0"
description = "Figure control manager for handling figure generating Python scripts"
readme = "README.md"
authors = [
    { name = "Aaron Gobeyn", email = "aaron.gobeyn@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
]

[project.scripts]
figaro = "figaro.figarocli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
